MES-263 - Production Order Service tests for findExistingIds